--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,7 @@ nav ul > li > h3:not(.active):hover {
 
 	width: 200px;
 	height: 310px;
-	/* margin: 0 20px; */
+
 	background-position: center;
 	background-size: cover;
 	position: relative;
@@ -184,10 +184,9 @@ nav ul > li > h3:not(.active):hover {
 
 .cardText {
 	padding-left: 20px;
-
 	background-color: rgba(0, 0, 0, 0.192);
 	box-sizing: border-box;
-	border: solid 4px #c3e2c2;
+	border: solid 1px #c3e2c2;
 	border-top: none;
 	border-radius: 20px;
 	height: 100%;
@@ -203,10 +202,11 @@ nav ul > li > h3:not(.active):hover {
 	font-size: 24px;
 	margin-top: 05px;
 	padding-bottom: 10px;
+	letter-spacing: 3px;
 }
 .cardText > p {
 	font-size: 16px;
-	padding-bottom: 5px;
+	margin-bottom: 10px;
 }
 .card:hover .cardText {
 	transform: translateY(10%);
@@ -604,64 +604,6 @@ nav ul > li > h3:not(.active):hover {
 }
 /*------------responsive-------------------------*/
 
-/* @media screen and (max-width: 1300px) {
-	.hamburguerMenu {
-		display: flex;
-		cursor: pointer;
-		position: relative;
-		right: -20px;
-	}
-	nav ul {
-		display: none;
-		flex-direction: column;
-		 width: 50%;
-		background-color: #c3e2c2;
-		position: absolute;
-		right: 0px;
-		margin: 367px 5% 0px 0px;
-		padding: 0px 20px;
-		z-index: 1;
-		border-radius: 0px 0px 0px 50px;
-		font-size: 28px;
-	}
-	nav ul > li {
-		width: 100%;
-		display: flex;
-		padding: 0px;
-		justify-content: right;
-	}
-	.mainTitle {
-		font-size: 36px;
-		margin: -320px 0px 170px 0px;
-	}
-	.secondTitle {
-		width: 65%;
-	}
-	.experiencesTitle {
-		width: 75%;
-		margin: 20px auto 300px;
-	}
-
-	.aboutUsTitle {
-		width: 100%;
-		margin: auto;
-		text-align: center;
-	}
-	.companyContainer {
-		width: 60%;
-	}
-	.aboutUsTitle {
-		width: 100%;
-	}
-	.companyContainer,
-	.companyContainer > img {
-		margin: auto;
-	}
-	.cardDescription {
-		width: 80%;
-		line-height: 1.5;
-	}
-}  */
 @media screen and (max-width: 1024px) {
 	.navBar {
 		padding: 8px 15px 8px 5px;
@@ -724,7 +666,8 @@ nav ul > li > h3:not(.active):hover {
 		letter-spacing: -2px;
 	}
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 800px) {
 	.navBar {
 		padding: 8px 30px 8px 5px;
 	}
@@ -745,7 +688,7 @@ nav ul > li > h3:not(.active):hover {
 		background-color: #c3e2c2;
 		position: absolute;
 		right: 0px;
-		margin: 380px 5% 0px 0px;
+		margin: 166px 5% 0px 0px;
 		padding: 0px 20px;
 		z-index: 1;
 		border-radius: 0px 0px 0px 50px;
@@ -762,7 +705,7 @@ nav ul > li > h3:not(.active):hover {
 		font-size: 32px;
 	}
 	.mainTitle {
-		margin: -150px 0px 50px 0px;
+		margin: -150px 0px 60px 0px;
 	}
 	.mainTitle > h1 {
 		font-size: 48px;
@@ -780,6 +723,18 @@ nav ul > li > h3:not(.active):hover {
 	.secondTitle > p,
 	.experiencesTitle > p {
 		font-size: 28px;
+	}
+	.cardContainer {
+		margin: 0px 20px 100px;
+	}
+	.card {
+		margin-bottom: 30px;
+	}
+	.cardText {
+		transform: translateY(10%);
+		border: solid 1px #c3e2c2;
+		border-top: none;
+		border-radius: 20px;
 	}
 	.experiencesTitle {
 		/* margin: 20px auto 240px; */
