--- a/src/index.css
+++ b/src/index.css
@@ -390,7 +390,7 @@ nav ul > li > h3:not(.active):hover {
 	display: flex;
 	flex-direction: column;
 	width: 61%;
-	margin: auto;
+	margin: 0px auto;
 	align-items: flex-start;
 	/* border: solid 5px red; */
 }
@@ -406,7 +406,7 @@ nav ul > li > h3:not(.active):hover {
 	width: 280px;
 	height: 280px;
 	border-radius: 20%;
-	margin: auto;
+	margin: 0px auto;
 	border: solid 5px #c3e2c2;
 	/* border: solid 5px red; */
 }
@@ -418,38 +418,106 @@ nav ul > li > h3:not(.active):hover {
 	/* border: solid 5px red; */
 	width: 90%;
 }
-.aboutUsTitle {
+.aboutUs {
 	background-color: #dbcc95;
 	width: 36%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	margin: 0px;
 	/* border: solid 5px red; */
 }
 
-.aboutUsTitle > h2 {
+/*---------------Slider----------------------*/
+.sliderContainer {
+	margin: 0px;
+	align-items: center;
+	display: flex;
+	justify-content: right;
+	position: relative;
+	width: 100%;
+	/* border: solid 1px red; */
+}
+.slide {
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px #c3e2c2;
+	width: 100%;
+	height: 100%;
+	/* border: solid 1px red; */
+}
+.slideHidden,
+.slideHiddenProfile {
+	display: none;
+}
+.slideProfile {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 20px;
+	margin: 0px auto;
+}
+.slideProfile > h2 {
 	margin: 20px;
 	text-align: center;
 	padding: 10px;
 	font-size: 32px;
 	/* border: solid 5px red; */
 }
-.aboutUsTitle > img {
+.slideProfile > img {
 	border: solid 5px #c3e2c2;
 	width: 280px;
 	height: 280px;
+	margin: 0px auto;
 	object-fit: cover;
 	border-radius: 50%;
-	/* padding: 10px; */
 }
-.aboutUsTitle > p {
+.slideProfile > p {
 	font-size: 28px;
 	text-align: left;
-	padding: 20px 30px;
+	padding: 40px 30px;
+
 	line-height: 1.5;
+
 	/* text-align: justify; */
 }
+.arrow {
+	position: absolute;
+	width: 2rem;
+	height: 2rem;
+	color: #c3e2c2;
+	filter: drop-shadow(0px 0px 10px #4a6660);
+}
+.arrow:hover {
+	cursor: pointer;
+}
+.left-arrow {
+	left: 16px;
+	top: 25%;
+}
+.right-arrow {
+	right: 16px;
+	top: 25%;
+}
+.indicators {
+	right: 50%;
+	position: absolute;
+	bottom: 16px;
+	top: 98%;
+	/* margin: 20px; */
+}
+.indicator {
+	border: solid 1px #c3e2c2;
+	background-color: #c3e2c2;
+	height: 24px;
+	width: 1.5rem;
+	border-radius: 100%;
+}
+.indicatorInactive {
+	border: solid 1px #4a6660;
+	background-color: #4a6660;
+	height: 1rem;
+	width: 1rem;
+	cursor: pointer;
+}
 
+/*-------------------------------------*/
 /*----------------------contact---------------*/
 .contactFormContainer {
 	display: flex;
@@ -564,61 +632,6 @@ nav ul > li > h3:not(.active):hover {
 }
 /*-------------------------------------*/
 
-/*---------------Slider----------------------*/
-.sliderContainer {
-	margin: 5px;
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	position: relative;
-	width: 100%;
-}
-.slide {
-	border-radius: 20px;
-	box-shadow: 0px 0px 10px #c3e2c2;
-	width: 100%;
-}
-.slideHidden {
-	display: none;
-}
-.arrow {
-	position: absolute;
-	width: 2rem;
-	height: 2rem;
-	color: #c3e2c2;
-	filter: drop-shadow(0px 0px 10px #4a6660);
-}
-.arrow:hover {
-	cursor: pointer;
-}
-.left-arrow {
-	left: 1rem;
-}
-.right-arrow {
-	right: 1rem;
-}
-.indicators {
-	right: 50%;
-	position: absolute;
-	bottom: 16px;
-}
-.indicator {
-	border: solid 1px #c3e2c2;
-	background-color: #c3e2c2;
-	height: 24px;
-	width: 1.5rem;
-	border-radius: 100%;
-	/* gap: 20px; */
-}
-.indicatorInactive {
-	border: solid 1px #4a6660;
-	background-color: #4a6660;
-	height: 1rem;
-	width: 1rem;
-	cursor: pointer;
-}
-
-/*-------------------------------------*/
 .marginBottom {
 	margin-bottom: 50px;
 }
@@ -680,7 +693,7 @@ nav ul > li > h3:not(.active):hover {
 		width: 80%;
 	}
 	.companyContainer,
-	.aboutUsTitle {
+	.aboutUs {
 		width: 100%;
 	}
 	.companyContainer > h2,
