--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ nav ul.open {
 nav ul > li > h3 {
 	/* border: solid 3px red; */
 	font-size: 36px;
-	padding: 5px;
+	padding: 2px;
 	border-radius: 15px;
 	margin: 0px 10px;
 }
@@ -63,10 +63,10 @@ nav ul > li > h3:not(.active):hover {
 	color: #f4f2de;
 	cursor: pointer;
 }
-.active {
+/* .active {
 	background-color: #4a6660;
 	color: #f4f2de;
-}
+} */
 /* para manter selecionado a página aberta */
 /*--------------HamburguerMenu-----------------------*/
 .hamburguerMenu {
@@ -848,8 +848,8 @@ nav ul > li > h3:not(.active):hover {
 		background-color: #c3e2c2;
 		position: absolute;
 		right: 0px;
-		margin: 166px 5% 0px 0px;
-		padding: 0px 20px;
+		margin: 352px 5% 0px 0px;
+		padding: 0px 20px 10px;
 		z-index: 1;
 		border-radius: 0px 0px 0px 50px;
 	}
@@ -932,7 +932,8 @@ nav ul > li > h3:not(.active):hover {
 	.countainerPageNF {
 		margin: -130px auto 30px;
 	}
-	.indicatorsProfile {
+	.indicatorsProfile,
+	.indicators {
 		display: none;
 	}
 }
@@ -950,7 +951,7 @@ nav ul > li > h3:not(.active):hover {
 	}
 	nav ul {
 		width: 45%;
-		margin: 308px 5% 0px 0px;
+		margin: 323px 5% 0px 0px;
 	}
 	nav ul > li {
 		font-size: 28px;
@@ -979,7 +980,8 @@ nav ul > li > h3:not(.active):hover {
 	}
 
 	.secondTitle > h2,
-	.experiencesTitle > h2 {
+	.experiencesTitle > h2,
+	.cardInfoTitle > h2 {
 		font-size: 28px;
 	}
 	.secondTitle > p,
@@ -987,6 +989,10 @@ nav ul > li > h3:not(.active):hover {
 	.cardInfoTitle > p {
 		font-size: 24px;
 		/* line-height: 1.2; */
+	}
+	.cardSlide {
+		width: 90%;
+		margin: -90px auto;
 	}
 	.cardText {
 		backdrop-filter: blur(1px);
@@ -1073,7 +1079,47 @@ nav ul > li > h3:not(.active):hover {
 	.numberContact {
 		font-size: 18px !important;
 	}
-	.mapContainer {
+	.mainMapContainer {
+		width: 80%;
 		height: 250px;
+	}
+	.left-arrow {
+		left: 10px;
+	}
+	.right-arrow {
+		right: 10px;
+	}
+
+	.cardWeather {
+		margin-top: 30px;
+	}
+	.weatherContainer {
+		/* background-color: #4a6660dd; */
+		/* color: #f4f2de; */
+		width: 250px;
+		/* font-size: 24px; */
+		height: 250px;
+		/* border-radius: 50%; */
+		/* border: solid 5px #4a6660; */
+		/* border-radius: 27px 27px 0px 0px; */
+	}
+	.weatherContainer > h2 {
+		/* background-color: #4a6660; */
+		/* border-radius: 25px 25px 0px 0px; */
+		/* margin: 10px auto 0px; */
+		padding: 10px;
+		/* color: #f4f2de; */
+		font-size: 20px;
+	}
+
+	.weatherDate {
+		font-size: 20px;
+		/* padding: 15px;
+		color: #4a6660; */
+	}
+
+	.mainTemp {
+		padding-top: 10px;
+		font-size: 20px;
 	}
 }
